Create basic site data and controls

--- a/_data/site.yml
+++ b/_data/site.yml
@@ -1,1 +1,13 @@
 title: Andrew Robillard
+meta: Portfolio for Ottawa, ON based cinematographer Andrew Robillard.
+owner: Hugh Andrew Robillard
+jobTitle: Cinematographer
+url: https://andrewrobillard.com
+email: andrewrobillarddp@gmail.com
+tel: '+16138674912'
+postalCode: K1R 7B6
+social:
+  - type: instagram
+    url: https://www.instagram.com/hurobes/
+  - type: vimeo
+    url: https://vimeo.com/andrewrobillard
