Layout, nav, and structure

--- a/_data/site.yml
+++ b/_data/site.yml
@@ -11,3 +11,5 @@ social:
     url: https://www.instagram.com/hurobes/
   - type: vimeo
     url: https://vimeo.com/andrewrobillard
+  - type: linkedin
+    url: https://www.linkedin.com/in/andrewrobillard/
