Home page build

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,3 +1,9 @@
 banner:
   title: Your stories told
   img: 'https://placehold.it/2500x1400'
+about:
+  img: /images/uploads/about-me.jpg
+  content: |-
+    I am a cinematographer and musician from Ottawa, Canada. I’ve been creating videos for the past decade and am more excited than ever to be doing&nbsp;so.
+
+    I consider myself pretty easy going, and I think that making videos should be enjoyable for everyone involved. If that makes sense to you then let’s talk about your ideas!
