Update homepage functionality

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -2,8 +2,14 @@ banner:
   title: Your stories told
   img: 'https://placehold.it/2500x1400'
 about:
+  title: About
   img: /images/uploads/about-me.jpg
   content: |-
     I am a cinematographer and musician from Ottawa, Canada. I’ve been creating videos for the past decade and am more excited than ever to be doing&nbsp;so.
 
     I consider myself pretty easy going, and I think that making videos should be enjoyable for everyone involved. If that makes sense to you then let’s talk about your ideas!
+contact:
+  title: Contact
+  content: |-
+    Let me know what you are looking to create and I will let you know how I can help.
+  form:
