Update General Content “home-content”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -31,5 +31,11 @@ contact:
       - label: Message
         type: textarea
         width: 1
+      - name: Job Type
+        options:
+          - undefined: Barter
+          - undefined: Not For Profit
+          - undefined: For Profit
+        type: radio
     submit: Submit
   title: Contact
