--- a/admin/config.yml
+++ b/admin/config.yml
@@ -158,6 +158,20 @@ collections:
                               - label: Label
                                 name: label
                                 widget: string
+                      - label: Checkboxes
+                        name: checkbox
+                        widget: object
+                        fields:
+                          - label: Group Nmae
+                            name: name
+                            widget: string
+                          - label: Options
+                            name: options
+                            widget: list
+                            fields:
+                              - label: Label
+                                name: label
+                                widget: string
                   - label: Submit Button Label
                     name: submit
                     widget: string
