--- a/admin/config.yml
+++ b/admin/config.yml
@@ -111,6 +111,19 @@ collections:
                             name: placeholder
                             widget: string
                             required: false
+                          - label: Responsive Width
+                            name: width
+                            widget: select
+                            hint: Width of form field at medium and large screen sizes (will always be full width at small screen sizes).
+                            options:
+                              - label: Full
+                                value: 1-2
+                              - label: Half
+                                value: 1-2
+                              - label: Third
+                                value: 1-3
+                              - label: Quarter
+                                value: 1-4
                       - label: Long Text
                         name: textarea
                         widget: object
