--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,6 +1,7 @@
 banner:
   img: 'https://placehold.it/2500x1400'
   title: Your stories told
+  video: 'https://player.vimeo.com/video/185239002'
 about:
   content: >-
     I am a cinematographer and musician from Ottawa, Canada. I’ve been creating
