--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,6 +1,6 @@
 banner:
-  img: 'https://placehold.it/2500x1400'
-  title: MUSIC. DOCS. COMMERCIAL
+  img: /images/uploads/Still.jpg
+  title: LET'S MAKE A VIDEO
   video: 'https://player.vimeo.com/video/185239002'
 about:
   content: >-
