Update General Content “home-content”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,6 +1,6 @@
 banner:
-  img: /images/uploads/Still.jpg
-  title: LET'S MAKE A VIDEO
+  img: /images/uploads/2.jpg
+  title: LET'S WORK TOGETHER
   video: 'https://player.vimeo.com/video/185239002'
 about:
   content: >-
