--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,7 +1,7 @@
 banner:
   img: /images/uploads/2.jpg
   title: LET'S WORK TOGETHER
-  video: 'https://vimeo.com/378626268'
+  video: 'https://player.vimeo.com/video/378626268'
 about:
   content: >-
     I am a cinematographer and musician from Ottawa, Canada. I’ve been creating
