Update General Content “home-content”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,7 +1,7 @@
 banner:
   img: /images/uploads/2.jpg
   title: LET'S WORK TOGETHER
-  video: 'https://player.vimeo.com/video/384437336'
+  video: 'https://player.vimeo.com/video/384438409/d28ccb1bb2'
 about:
   content: >-
     I am a cinematographer and musician from Ottawa, Canada. I’ve been creating
