Add proper reel link

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,3 +1,6 @@
+reel:
+  video: 'https://player.vimeo.com/video/140700088'
+  desc:
 banner:
   img: /images/uploads/2.jpg
   title: LET'S WORK TOGETHER
