--- a/admin/config.yml
+++ b/admin/config.yml
@@ -59,6 +59,16 @@ collections:
         name: "home-content"
         file: _data/home.yml
         fields:
+          - label: Reel
+            name: reel
+            widget: object
+            fields:
+              - label: Vimeo Link
+                name: video
+                widget: string
+              - label: Description
+                name: desc
+                widget: string
           - label: Banner
             name: banner
             widget: object
