--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,9 +1,9 @@
 reel:
+  desc: Demo Reel 2020
   video: 'https://player.vimeo.com/video/140700088'
-  desc:
 banner:
   img: /images/uploads/2.jpg
-  title: LET'S WORK TOGETHER
+  title: TELL ME ABOUT YOUR PROJECT
   video: 'https://player.vimeo.com/video/384438409'
 about:
   content: >-
