--- a/_data/home.yml
+++ b/_data/home.yml
@@ -2,14 +2,13 @@ reel:
   desc: Demo Reel 2020
   video: 'https://player.vimeo.com/video/185239002'
 banner:
-  img: /images/uploads/2.jpg
+  img: /images/uploads/bg.jpg
   title: Tell me about your project
-  byline:
+  byline: null
   btn:
     text: Learn More
-    url:
+    url: null
   video: 'https://player.vimeo.com/video/384437336'
-  # video: 'https://player.vimeo.com/video/384438409'
 about:
   content: |-
     I am a cinematographer and musician from Ottawa, Canada. I’ve been creating
