--- a/_data/home.yml
+++ b/_data/home.yml
@@ -7,7 +7,8 @@ banner:
   byline: Talk to me about remote video production during the Covid-19 crisis!
   btn:
     text: Learn More
-    url: null
+    url: >-
+      https://robillard-andrew-portfolio.netlify.com/behind-the-scenes/perfect-skating/
   video: 'https://player.vimeo.com/video/384437336'
 about:
   content: |-
