Update General Content “home-content”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -21,7 +21,7 @@ about:
     talk about your ideas!
   img: /images/uploads/about-me.jpg
   title: About
-  overlap: true
+  overlap: false
 contact:
   content: |-
     Let me know what you are looking to create and I will let you know how I can
